# HDK-Logger

./: .gitmodules  CMakeLists.txt  HDK-Logger.cpp  README.md
hidapipp/: Config.h  Device.h  Enumeration.h  HandleError.h  Library.h  hidapipp.h
